# json2obj

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: test.yaml
json2obj/json2obj.egg-info/: PKG-INFO  SOURCES.txt
src/json2obj/: __init__.py  core.py  exceptions.py  helpers.py
tests/: test_json2obj.py
